--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.foriatickets.foria">
 
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
@@ -6,6 +7,8 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
     <application
+        android:allowBackup="false"
+        android:fullBackupContent="false"
         android:name="io.flutter.app.FlutterApplication"
         android:label="foria"
         android:icon="@mipmap/ic_launcher">
