Added register and transfer screen v1 Removed unused widgets and screen Renamed widgets and files

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,9 @@ flutter:
     - family: ticket
       fonts:
         - asset: assets/ui_elements/ticket.ttf
+    - family: ellipse
+      fonts:
+        - asset: assets/ui_elements/ellipse.ttf
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
