--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,11 @@ dependencies:
   font_awesome_flutter: ^8.0.1
   jose: ^0.1.2
   otp: 1.0.1
+  provider: ^3.0.0+1
   flutter_auth0:
     git:
       url: https://github.com/devdennysegura/flutter-auth0
-  openapi:
+  foria_flutter_client:
     git:
       url: ssh://git@bitbucket.org/foriatickets/foria-flutter-client.git
 
