--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   image_picker: ^0.6.0+15
   path: ^1.6.2
   path_provider: ^1.1.0
+  url_launcher: ^5.1.2
   flutter_auth0:
     git:
       url: https://github.com/devdennysegura/flutter-auth0
