--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,12 @@ dependencies:
   # used for date management
   intl: ^0.15.8
 
-
   #Used for local file storage
+  encrypt: '>=3.1.0'
+  crypto: '>=2.0.6'
   path: ^1.6.2
   path_provider: ^1.1.0
+  sembast: ^2.0.1
 
   flutter_auth0:
     git:
@@ -87,16 +89,3 @@ flutter:
     - family: ellipse
       fonts:
         - asset: assets/ui_elements/ellipse.ttf
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.io/custom-fonts/#from-packages
