--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_secure_storage: 3.2.1
   font_awesome_flutter: ^8.0.1
   jose: ^0.1.2
+  qr_flutter: ^2.1.0+55
   otp: 1.0.3
   provider: ^3.0.0+1
   flutter_email_sender: ^2.0.3
