FM-4 : Scanner Working
Scanner works for all three cases: ALLOW, DENY, ERROR

UI need to be styled for better user experience.

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -59,6 +59,12 @@ target 'Runner' do
     File.symlink(p[:path], symlink)
     pod p[:name], :path => File.join(symlink, 'ios')
   }
+
+  # Manual Firebase Pods
+
+  pod 'Firebase/Analytics'
+  pod 'Firebase/MLVisionBarcodeModel'
+
 end
 
 post_install do |installer|
