--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,3 +77,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
 }
+
+apply plugin: 'com.google.gms.google-services'
