--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   provider: ^3.0.0+1
   flutter_email_sender: ^2.0.3
   url_launcher: ^5.1.2
+  wakelock: ^0.1.2+8
 
   # used for date management
   intl: ^0.15.8
