--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,8 +58,10 @@ android {
 
     buildTypes {
         release {
-
-            signingConfig signingConfigs.release
+            def keystorePropertiesFile = rootProject.file('key.properties')
+            if (keystorePropertiesFile.exists()) {
+                signingConfig signingConfigs.release
+            }
 
             minifyEnabled true
             useProguard true
