--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cached_network_image: ^1.1.1
   cupertino_icons: ^0.1.2
-  firebase_core: 0.4.0+3
+  firebase_core: ^0.4.0+3
   firebase_analytics: ^5.0.0
   flutter_camera_ml_vision: ^2.2.1
   flutter_secure_storage: 3.2.1
