FM-42 : HOTFIX Add Gradlew & Gradlew Wrapper
Added Path param support for Flutter SDK

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -13,7 +13,8 @@ if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 }
 
-def flutterRoot = localProperties.getProperty('flutter.sdk')
+def flutterRoot = localProperties.getProperty('flutter.sdk') != null ?
+        localProperties.getProperty('flutter.sdk') : System.getenv('FLUTTER_SDK')
 if (flutterRoot == null) {
     throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
