--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -13,8 +13,7 @@ if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 }
 
-def flutterRoot = localProperties.getProperty('flutter.sdk') != null ?
-        localProperties.getProperty('flutter.sdk') : System.getenv('FLUTTER_SDK')
+def flutterRoot = localProperties.getProperty('flutter.sdk')
 if (flutterRoot == null) {
     throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
