--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -42,7 +42,8 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".RedirectUriReceiver">
+                android:name="io.flutter.plugins.flutterauth0.AuthenticationReceiver"
+                android:parentActivityName=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
