--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -29,7 +29,7 @@
 			<string>auth0</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+				<string>com.foriatickets.foria-tickets</string>
 			</array>
 		</dict>
 	</array>
@@ -58,8 +58,8 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>NSCameraUsageDescription</key>
-    <string>Camera permission is required to verify your identity and scan event tickets.</string>
-    <key>NSMicrophoneUsageDescription</key>
-    <string>Camera and microphone permission is required to scan ticket barcodes.</string>
+	<string>Camera permission is required to verify your identity and scan event tickets.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Camera and microphone permission is required to scan ticket barcodes.</string>
 </dict>
 </plist>
