--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -39,6 +39,15 @@
 	<false/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera permission is required to verify your identity and scan event tickets.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Camera and microphone permission is required to scan ticket barcodes.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -57,9 +66,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>NSCameraUsageDescription</key>
-	<string>Camera permission is required to verify your identity and scan event tickets.</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>Camera and microphone permission is required to scan ticket barcodes.</string>
 </dict>
 </plist>
