--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   firebase_core: ^0.4.0+3
   firebase_analytics: ^5.0.0
+  firebase_messaging: ^5.1.4
   flutter_auth0: ^0.5.0
   flutter_camera_ml_vision: ^2.2.1
   flutter_secure_storage: 3.2.1
@@ -49,6 +50,7 @@ dependencies:
   sembast: ^2.0.1
 
   foria_flutter_client:
+    version: 1.2.0
     git:
       url: ssh://git@bitbucket.org/foriatickets/foria-flutter-client.git
 
