FM-51_set_build_specific_config
Established main_prod and main_staging
Added configuration file to route the proper Auth0 and Api urls
Added different jwks files for prod and staging
Updated android manifest for proper Auth0 url
iOS did not need to be updated for proper Auth0 url

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -60,6 +60,15 @@
                         android:pathPrefix="/android/${applicationId}/callback"
                         android:scheme="${applicationId}" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data
+                        android:host="foriatickets-test.auth0.com"
+                        android:pathPrefix="/android/${applicationId}/callback"
+                        android:scheme="${applicationId}" />
+            </intent-filter>
         </activity>
     </application>
 </manifest>
