--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/jwks.json
+    - assets/jwks_prod.json
+    - assets/jwks_staging.json
     - assets/images/
     - assets/ui_elements/
 
