--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_camera_ml_vision: ^2.2.1
   flutter_secure_storage: 3.2.1
   font_awesome_flutter: ^8.0.1
+  get_it: ^3.0.0+1
   intl: ^0.16.0
   jose: ^0.1.2
   qr_flutter: ^2.1.0+55
@@ -48,7 +49,7 @@ dependencies:
   sembast: ^2.0.1
 
   foria_flutter_client:
-    version: 1.2.0
+    version: 1.3.0
     git:
       url: ssh://git@bitbucket.org/foriatickets/foria-flutter-client.git
 
