--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   qr_flutter: ^2.1.0+55
   otp: 1.0.3
   provider: ^3.0.0+1
+  sentry: '>=2.0.0 <3.0.0'
   flutter_email_sender: ^2.0.3
   url_launcher: ^5.1.2
   wakelock: ^0.1.2+8
