FM-57_discover_events_tab
Created a new tab 'home'. UI built to show a list of all live events. When clicked, browser opened to purchase screen
Added outline_material_icons. Used Icon for home tab

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,3 +95,6 @@ flutter:
     - family: ellipse
       fonts:
         - asset: assets/ui_elements/ellipse.ttf
+    - family: outline_material_icons
+      fonts:
+        - asset: assets/ui_elements/outline_material_icons.ttf
