--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,7 +57,7 @@ android {
             signingConfig signingConfigs.release
 
             minifyEnabled true
-            useProguard true
+            useProguard false
             debuggable false
 
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
