--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   jose: ^0.1.2
   qr_flutter: ^2.1.0+55
   otp: 1.0.3
+  package_info: ^0.4.0+6
   provider: ^3.0.0+1
   sentry: '>=2.0.0 <3.0.0'
   flutter_email_sender: ^2.0.3
