Added Associated Domain Entitlement
Added branch links

--- a/ios/Runner/RunnerRelease.entitlements
+++ b/ios/Runner/RunnerRelease.entitlements
@@ -9,6 +9,8 @@
 		<string>applinks:foriatickets.com</string>
 		<string>applinks:events.foriatickets.com</string>
 		<string>applinks:events-test.foriatickets.com</string>
+		<string>applinks:foria.app.link</string>
+		<string>applinks:foria-alternate.app.link</string>
 	</array>
 </dict>
 </plist>
