--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   flutter_auth0:
     version: ^0.5.0
     git:
-      url: git@github.com:cschwalm/flutter-auth0.git
+      url: https://github.com/cschwalm/flutter-auth0.git
 
   foria_flutter_client:
     version: 1.6.0
