--- a/ios/Runner/RunnerRelease.entitlements
+++ b/ios/Runner/RunnerRelease.entitlements
@@ -8,6 +8,8 @@
 	<array>
 		<string>applinks:foria.app.link</string>
 		<string>applinks:foria-alternate.app.link</string>
+		<string>applinks:foria.test-app.link</string>
+		<string>applinks:foria-alternate.test-app.link</string>
 	</array>
 </dict>
 </plist>
