--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,7 +57,10 @@ android {
             signingConfig signingConfigs.release
 
             minifyEnabled true
+            useProguard false
             debuggable false
+
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
@@ -78,6 +81,7 @@ flutter {
 }
 
 dependencies {
+    implementation "androidx.exifinterface:exifinterface:1.1.0-rc01"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
