--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,32 +22,32 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cached_network_image: ^1.1.1
+  cached_network_image: ^1.1.3
   cupertino_icons: ^0.1.2
-  firebase_core: ^0.4.0+9
-  firebase_analytics: ^5.0.0
-  firebase_messaging: ^5.1.6
-  flutter_camera_ml_vision: ^2.2.1
-  flutter_secure_storage: 3.3.1
-  font_awesome_flutter: ^8.0.1
-  get_it: ^3.0.0+1
-  intl: 0.15.8
+  firebase_core: ^0.4.1+3
+  firebase_analytics: ^5.0.6
+  firebase_messaging: ^5.1.8
+  flutter_camera_ml_vision: ^2.2.4
+  flutter_secure_storage: ^3.3.1
+  font_awesome_flutter: ^8.5.0
+  get_it: ^3.0.2
+  intl: ^0.15.8
   jose: ^0.1.2
-  qr_flutter: ^2.1.0+55
-  otp: 1.0.3
-  package_info: ^0.4.0+6
-  provider: ^3.0.0+1
+  qr_flutter: ^3.1.0
+  otp: ^1.0.3
+  package_info: ^0.4.0+10
+  provider: ^3.1.0+1
   sentry: '>=2.0.0 <3.0.0'
-  flutter_email_sender: ^2.0.3
-  url_launcher: ^5.1.2
-  wakelock: ^0.1.2+8
+  flutter_email_sender: ^2.1.0
+  url_launcher: ^5.2.5
+  wakelock: ^0.1.3
 
   #Used for local file storage
   encrypt: '>=3.1.0'
   crypto: '>=2.0.6'
-  path: ^1.6.2
-  path_provider: ^1.1.0
-  sembast: ^2.0.1
+  path: ^1.6.4
+  path_provider: ^1.4.0
+  sembast: ^2.1.0
 
   flutter_auth0:
     git:
