--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   intl: ^0.15.8
   jose: ^0.1.2
   qr_flutter: ^3.1.0
+  ntp: ^1.0.4
   otp: ^1.0.3
   package_info: ^0.4.0+10
   provider: ^3.1.0+1
