--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_email_sender: ^2.1.0
   url_launcher: ^5.2.5
   wakelock: ^0.1.3
+  shared_preferences: ^0.5.4+5
 
   #Used for local file storage
   encrypt: '>=3.1.0'
