--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
   get_it: ^3.0.2
   intl: ^0.15.8
   jose: ^0.1.2
+  logging: ^0.11.3+2
   qr_flutter: ^3.1.0
+  quick_actions: ^0.4.0
   ntp: ^1.0.4
   otp: ^1.0.3
   package_info: ^0.4.0+10
