--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,16 +22,16 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cached_network_image: ^1.1.3
+  cached_network_image: ^2.0.0-rc
   cupertino_icons: ^0.1.2
-  firebase_core: ^0.4.1+3
+  firebase_core: ^0.4.3+1
   firebase_analytics: ^5.0.6
   firebase_messaging: ^5.1.8
   flutter_camera_ml_vision: ^2.2.4
   flutter_secure_storage: ^3.3.1
   font_awesome_flutter: ^8.5.0
   get_it: ^3.0.2
-  intl: ^0.15.8
+  intl: ^0.16.0
   jose: ^0.1.2
   logging: ^0.11.3+2
   qr_flutter: ^3.1.0
@@ -41,8 +41,8 @@ dependencies:
   package_info: ^0.4.0+10
   provider: ^3.1.0+1
   sentry: '>=2.0.0 <3.0.0'
-  flutter_email_sender: ^2.1.0
-  url_launcher: ^5.2.5
+  flutter_email_sender: ^2.2.1
+  url_launcher: ^5.4.1
   wakelock: ^0.1.3
   shared_preferences: ^0.5.4+5
 
